# os-lab-1

./: .gitignore  CMakeLists.txt  README.md  bin_file  creator.cpp  employee.h  main.cpp  reporter.cpp
src/: reporter.cpp
tests/: tests.cpp
